<resources>
    <string name="app_name">cammeet</string>
    <string name="signin">sign in</string>
    <string name="click">MEETINGS</string>
    <string name="TrustMessage">Please Click To Sign in with your Office mail</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">welcome</string>
    <string name="invalid_username">Invalid user name</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="login_failed">Login Failed</string>
    <string name="create_account">create account</string>
    <string name="User_Name">Name</string>
    <string name="emailHint">E-mails</string>
    <string name="phone">phone number</string>
    <string name="grant_event_write_permission">You Can Edit This Event</string>
    <string name="refuse_event_write_permission">You are not the Owner of This Event</string>
    <string name="title">Title</string>
    <string name="location_image_view">location</string>
    <string name="clear_image_view">clear image view</string>
    <string name="admin_image_view">admin image view</string>
    <string name="edit_image_view">edit image view</string>
    <string name="Already_hava_account">Already have an account</string>
    <string name="signnamecontentDescription">Name place holder</string>
    <string name="signemailcontentDescription">email place holder</string>
    <string name="signphonecontentDescription">phone number place holder</string>
    <string name="signpasswordcontentDescription">password place holder</string>
    <string name="EnterFiled"> Please Enter all Fields as required </string>
    <string name="Server_down"> Cannot connect to the server </string>
    <string name="account_created"> your account has been created  </string>
    <string name="choose_time_period"> choose a period </string>
    <string name="starting_from"> Select Start Time </string>
    <string name="end_time"> Select End Time </string>
    <string name="validate"> validate </string>
    <string name="cancel"> Cancel </string>
    <string name="authorise_siging">Athorise Signing</string>
    <string name="end_signing">Stop Signing</string>
    <string name="sign">sign Event</string>
    <string name="no_events">No events Were Found</string>
    <string name="fil_form">Fill the  Form</string>
    <string-array name="Departments">
        <item>Informatique</item>
        <item>Service Après-vente</item>
        <item>Technique</item>
        <item>Comercial</item>
        <item>Recherche Et Development</item>
        <item>Contable</item>
        <item>Resources Humains</item>
    </string-array>
    <string-array name="Department_Role">
        <item>Director</item>
        <item>Head of a Service</item>
    </string-array>

</resources>
