<?xml version="1.0" encoding="utf-8"?><!--  res/layout/verify_num.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonstartdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="StartDatePickerDialog"
            android:text="@string/starting_from"
            android:textAlignment="center"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textstartdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonenddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:onClick="EndDatePickerDialog"
            android:text="@string/end_time"
            android:textAlignment="center"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textendtdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/validate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.925"
            android:onClick="dialog_validate"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="dialog_canel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.925"
            tools:ignore="ButtonStyle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>