<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerCreate_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/darker_layout_background"
    tools:context=".activities.create_account.Signup">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_margin="10dp"
        android:src="@drawable/newlogocamtrack"
        app:layout_constraintBottom_toTopOf="@id/circle_textview_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:id="@+id/circle_textview_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="24dp"
        android:layout_marginTop="25dp"
        android:foregroundGravity="center"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:cardBackgroundColor="@color/darker_layout_background"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <EditText
        android:id="@+id/username"
        android:layout_width="275dp"
        android:layout_height="34dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#00ACFF"
        android:autofillHints="personName"
        android:hint="@string/User_Name"
        android:gravity="center"
        android:textColor="@color/white_black"
        android:textColorHint="@color/upper_rounded_squqre_background"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="34dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#00ACFF"
        android:autofillHints="password"
        android:hint="@string/prompt_password"
        android:gravity="center"
        android:textColor="@color/white_black"
        android:textColorHint="@color/upper_rounded_squqre_background"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="280dp"
        android:layout_height="34dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#00ACFF"
        android:autofillHints="Text"
        android:layout_margin="15dp"
        android:hint="@string/emailHint"
        android:gravity="center"
        android:textColor="@color/white_black"
        android:textColorHint="@color/upper_rounded_squqre_background"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="280dp"
        android:layout_height="34dp"
        android:autofillHints="phone"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#00ACFF"
        android:layout_margin="15dp"
        android:hint="@string/phone"
        android:gravity="center"

        android:inputType="phone"
        android:textColor="@color/white_black"
        android:textColorHint="@color/upper_rounded_squqre_background"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.569" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Spinner
        android:id="@+id/department"
        android:layout_width="275dp"
        android:gravity="center"
        android:layout_height="34dp"
        app:layout_constraintBottom_toTopOf="@id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_textview_card"
        app:layout_constraintVertical_bias="0.332" />

    <Button
        android:id="@+id/signup"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/darker_layout_background"
        android:text="@string/action_sign_in"
        android:textColor="#00ACFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_textview_card"
        app:layout_constraintVertical_bias="0.677" />

    <TextView
        android:id="@+id/login_sign_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Already_hava_account"
        android:textColor="#00ACFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.981" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/circle_textview_card"
        app:layout_constraintStart_toStartOf="@+id/circle_textview_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>