<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Events.ViewEvent">

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/clear_image_view"
            android:text="@string/sign"
            android:visibility="invisible"
            app:tint="@color/black_white" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="180dp"
            android:background="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/edit_image_view"
            android:visibility="invisible"
            app:tint="@color/black_white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Linear"
        android:layout_marginTop="60dp"
>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black_white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/location_image_view"
                     android:background="@drawable/ic_baseline_location_on_24"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:textSize="18sp"/>
        </LinearLayout>

            <TextView
                android:id="@+id/Owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="13dp"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_admin_panel_settings_24" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_image_view"
                    android:background="@drawable/ic_baseline_people_24"/>
                <FrameLayout
                    android:id="@+id/attendeesfragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/attendeesRecycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:scrollbars="none"  />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_image_view"
                    android:background="@drawable/ic_baseline_description_24"/>
                <TextView
                    android:id="@+id/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/startsigning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/authorise_siging"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>