<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/darker_layout_background"
    tools:context=".activities.login.login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="156dp"
        android:layout_height="137dp"
        android:layout_margin="10dp"
        android:src="@drawable/newlogocamtrack"
        app:layout_constraintBottom_toTopOf="@id/ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="24dp"
        android:layout_marginTop="25dp"
        android:foregroundGravity="center"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ll"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:cardBackgroundColor="@color/darker_layout_background"
        android:backgroundTint="@null"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/cars">
            <EditText
                android:id="@+id/userid"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:gravity="start|center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rounded_edit_text"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="36dp"
        app:errorTextColor="@color/white"
        app:hintEnabled="false"
        app:passwordToggleTint = "@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid">
        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:gravity="start|center"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edit_text"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:padding="15dp"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shaded_cylinder"
        android:textIsSelectable="true"
        android:gravity="center"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>